kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes
  namespace: notes
spec:
  selector:
    app: notes
  ports:
  - name: service-port
    protocol: TCP
    port: 80
    targetPort: 5000
